--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <section id="Juegos">
         <h1>Juegos</h1>
         <div class="linea"></div>
-        <div id="cs1" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#cs1" data-slide-to="0"></li>
-                <li data-target="#cs1" data-slide-to="1"></li>
-                <li data-target="#cs1" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-                <div class="item">
+                <div class="item active">
                     <a href="https://studio.code.org/projects/gamelab/lkWhAnhV-ShE65eHHdfn1LpZs_z-iiZcKE0R1wbiJN8"
                         target="_blank"><img src="astronautas.png" alt=""></a>
                 </div>
@@ -52,10 +52,10 @@
                         target="_blank"><img src="peleaaaa.png" alt=""></a>
                 </div>
             </div>
-            <a class="left carousel-control" href="#cs1" role="button" data-slide="prev">
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <a class="right carousel-control" href="#cs1" role="button" data-slide="next">
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
         </div>
